# FlaskDiIndex-Di-Indicators

./: BACKUP_RESTORE.md  CRON_SETUP.md  IMPLEMENTATION_GUIDE.md  SYSTEM_DOCUMENTATION.md  SYSTEM_DOCUMENTATION_UPDATE.md  check_history_dates.py  check_last_dates.py  config.py  cron_test.py  daily_update.py  db_init.py  debug_api.py  fix_json_files.py  main.py  models.py  pyproject.toml  server.py  server.py.backup  server.py.bak  server_check.py  test_git_sync.txt  test_history_data.py  test_update.py  tracked_symbols.json  update_history_format.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-ru-head-meta-charset-UTF-8-title-DI-Index--1741803969621.txt  Pasted--DOCTYPE-html-html-lang-ru-head-meta-charset-UTF-8-title-DI-Index--1741804445926.txt  Pasted--body-h1-DI-Index-h1-div-class-controls-select-id-cryptoSele-1741810757577.txt  Pasted--var-www-html-di-index-new-venv-bin-python3-daily-update-py-2025-04-26-12-15-45-390-daily-update--1745659000475.txt  Pasted--venv-root-imm1-var-www-html-di-index-new-cat-main-py-journalctl-u--1744284455993.txt  Pasted--venv-root-imm1-var-www-html-di-index-new-cd-var-www-html-di-index-new--1744284913053.txt  Pasted--venv-root-imm1-var-www-html-di-index-new-cd-var-www-html-di-index-new-python3-debug-api-py-2025-1744283314682.txt  Pasted--venv-root-imm1-var-www-html-di-index-new-cd-var-www-html-di-index-new-var-www-html-di-index-1745659835345.txt  Pasted--venv-root-imm1-var-www-html-di-index-new-cd-var-www-html-di-index-new-var-www-html-di-index-1745660059195.txt  Pasted-2024-10-20-Di-s-1742234645649.txt  (+13 more)
data/: btc_4h_history.json  (+2 more)
(+71 files in other folders)
