[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "logging-config>=1.0.4",
    "numpy>=1.20.0",
    "pandas>=2.0.0",
    "pandas-ta==0.3.14b0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.25.0",
]
